logs/pyvol.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/misc'...
Compiling './lib/python3.5/site-packages/misc/ez_setup.py'...
***   File "./lib/python3.5/site-packages/misc/ez_setup.py", line 98
    except pkg_resources.VersionConflict, e:
                                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/misc/googlecode_upload.py'...
***   File "./lib/python3.5/site-packages/misc/googlecode_upload.py", line 180
    print 'Please enter your googlecode.com password.'
                                                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyvol'...
Listing './lib/python3.5/site-packages/pyvol/est'...
Compiling './lib/python3.5/site-packages/pyvol/est/CovEst.py'...
***   File "./lib/python3.5/site-packages/pyvol/est/CovEst.py", line 220
    print 'Test finished.'
                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pyvol/experimental'...
Compiling './lib/python3.5/site-packages/pyvol/experimental/ExampleEstimators.py'...
***   File "./lib/python3.5/site-packages/pyvol/experimental/ExampleEstimators.py", line 201
    print 'Test finished.'
                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pyvol/sims'...
Compiling './lib/python3.5/site-packages/pyvol/sims/DataSimulator.py'...
***   File "./lib/python3.5/site-packages/pyvol/sims/DataSimulator.py", line 39
    print 'Test finished.'
                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyvol/sims/EvaluateBestEstimator.py'...
***   File "./lib/python3.5/site-packages/pyvol/sims/EvaluateBestEstimator.py", line 56
    print 'Estimator results:\n%s\n' % str(userResults[0])
                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyvol/sims/Evaluator.py'...
***   File "./lib/python3.5/site-packages/pyvol/sims/Evaluator.py", line 189
    print 'Test finished.'
                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyvol/sims/MultiClusterSimulator.py'...
***   File "./lib/python3.5/site-packages/pyvol/sims/MultiClusterSimulator.py", line 339
    print 'Test finished.'
                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pyvol/testing'...
Listing './lib/python3.5/site-packages/pyvol/tseries'...
Compiling './lib/python3.5/site-packages/pyvol/tseries/ExcelTools.py'...
***   File "./lib/python3.5/site-packages/pyvol/tseries/ExcelTools.py", line 39
    except Exception,theException:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyvol/tseries/Sequence.py'...
***   File "./lib/python3.5/site-packages/pyvol/tseries/Sequence.py", line 479
    print 'Test finished.'
                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyvol/tseries/Transforms.py'...
***   File "./lib/python3.5/site-packages/pyvol/tseries/Transforms.py", line 320
    raise TypeError("""
        Expected variable '%s' to be a list/tuple of strings, but it is
        a '%s' which is of %s.""" %(name,`arg`,type(arg)))
                       
                                                                       
                                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyvol-1.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
